# example_chat

./: .env  .env.example  .gitignore  Cargo.toml  Makefile  README.md  package-lock.json  package.json  tailwind.config.ts
public/: tailwind.css
public/style/: tailwind.css
src/: component.rs  lib.rs  main.rs
src/database/: insert_one.rs  mod.rs  select_all.rs
src/database/model/: account.rs  message.rs  mod.rs
